// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rename-stylesheet should handle non-existent stylesheet 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Stylesheet not found","status":404,"detail":"The stylesheet was not found.","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`rename-stylesheet should rename a stylesheet 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
